# productteam

./: .commit_msg.txt  .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FUTURE.md  Makefile  README.md  SECURITY.md  bump_version.py  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.claude/hooks/: commit-size-gate.py  commit-size-gate.sh  commit-size-session-start.py  commit-size-session-start.sh
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: SUPERVISOR.md  build_pdf.py  index.html  terms.html
scripts/: verify-release.sh
skills/builder/: SKILL.md
skills/doc-writer/: SKILL.md
skills/evaluator/: SKILL.md
skills/evaluator-design/: SKILL.md
skills/orchestrator/: SKILL.md
skills/planner/: SKILL.md
skills/prd-writer/: SKILL.md
skills/ui-builder/: SKILL.md
src/productteam/: __init__.py  cli.py  config.py  doctor.py  errors.py  models.py  onboard.py  preflight.py  scaffold.py  selftest.py  supervisor.py  text_builder.py  tool_loop.py
src/productteam/forge/: __init__.py  daemon.py  dashboard.py  queue.py
src/productteam/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai.py
templates/: evaluation-report.yaml  handoff-artifact.yaml  sprint-contract.yaml
tests/: conftest.py  test_cli.py  test_config.py  test_cost_controls.py  test_dashboard.py  test_docs_quality.py  test_doctor.py  test_forge_daemon.py  test_forge_queue.py  test_integration_pipeline.py  test_live.py  test_onboard.py  test_preflight.py  test_providers.py  test_scaffold.py  test_security_hardening.py  test_supervisor.py  test_text_builder.py  test_tool_loop.py
