[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "productteam"
version = "2.2.0"
description = "AI-powered product development pipeline using Claude skills"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "product-development", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "tomli-w>=1.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://scottconverse.github.io/productteam/"
Repository = "https://github.com/scottconverse/productteam"
Documentation = "https://scottconverse.github.io/productteam/"
"Bug Tracker" = "https://github.com/scottconverse/productteam/issues"

[project.scripts]
productteam = "productteam.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/productteam"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "productteam/skills"
"templates" = "productteam/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that make real API calls (deselect with '-m \"not live\"')",
]
