[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "productteam"
version = "2.5.3"
description = "Your AI product team. Describe what you want. Wake up to shipping code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "product-development", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer[all]==0.24.1",
    "pydantic==2.12.5",
    "rich==14.3.3",
    "pyyaml==6.0.3",
    "tomli-w==1.2.0",
    "anthropic==0.86.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://scottconverse.github.io/productteam/"
Repository = "https://github.com/scottconverse/productteam"
Documentation = "https://scottconverse.github.io/productteam/"
"Bug Tracker" = "https://github.com/scottconverse/productteam/issues"

[project.scripts]
productteam = "productteam.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/productteam"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "productteam/skills"
"templates" = "productteam/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "live: marks tests that make real API calls (deselect with '-m \"not live\"')",
]
